--- a/src/App.css
+++ b/src/App.css
@@ -6,14 +6,23 @@
 .chat-container {
   background-color: #eb9776;
   display: inline-block;
-  border-radius: 50%;
-  padding: 20px;
   border: none;
   position: fixed;
   right: 20px;
   bottom: 20px;
   cursor: pointer;
   outline: none;
+  border-radius: 50%;
+}
+.chat-container .chat-icon {
+  padding: 20px;
+}
+.chat-container .close-icon {
+  padding: 23px 10px 10px 25px;
+}
+.chat-container .close-icon svg {
+  margin-right: 5px;
+  margin-bottom: 5px;
 }
 
 .hide {
@@ -25,7 +34,7 @@
   right: 20px;
   bottom: 90px;
   height: 600px;
-  background-color: rgba(0, 0, 0, 0.04);
+  background-color: white;
   border-radius: 0 0 4px 4px;
   width: 350px;
   z-index: 999;
@@ -39,9 +48,23 @@
   border-radius: 4px 4px 0 0;
   color: white;
 }
+.chat-head button {
+  float: left;
+  background-color: #e38f6e;
+  border: none;
+  margin-top: 10px;
+  margin-left: 10px;
+  cursor: pointer;
+  outline: none;
+}
+.chat-head button svg {
+  fill: white;
+}
 .chat-head p {
   padding: 15px 0;
+  margin-right: 40px;
   font-size: 13px;
+  display: inline-block;
 }
 
 .chat-contact {
@@ -109,6 +132,7 @@
   opacity: 0.6;
   float: left;
   font-size: 14px;
+  outline-color: #07c;
 }
 .chat-form-content .textarea-container button {
   background-color: transparent;
@@ -137,6 +161,7 @@
   width: 88%;
   padding: 0 16px;
   opacity: 0.6;
+  outline-color: #07c;
 }
 .chat-form #send-button {
   background-color: #eb9776;
@@ -233,6 +258,107 @@
 }
 .sign-out:hover {
   background-color: grey;
+}
+
+.powered-by {
+  text-align: center;
+  display: inline-block;
+  cursor: pointer;
+}
+.powered-by .tooltip {
+  position: relative;
+  border-radius: 0.4em;
+  margin: 0 auto;
+  margin-bottom: 10px;
+  background-color: black;
+  color: white;
+  font-size: 12px;
+  padding: 2px 10px;
+  visibility: hidden;
+  display: block;
+  width: 95px;
+}
+.powered-by .tooltip::after {
+  content: "";
+  position: absolute;
+  bottom: 0;
+  left: 50%;
+  width: 0;
+  height: 0;
+  border: 5px solid transparent;
+  border-top-color: black;
+  border-bottom: 0;
+  margin-left: -5px;
+  margin-bottom: -5px;
+}
+.powered-by svg {
+  fill: #c1cbd4;
+  margin: 0 auto;
+}
+.powered-by:hover .tooltip {
+  visibility: visible;
+}
+
+.email-button {
+  display: inline-block;
+  position: absolute;
+  right: 10px;
+  top: 180px;
+  width: 330px;
+  transition: top ease 0.4s;
+}
+.email-button:hover {
+  top: 175px;
+}
+.email-button button {
+  padding: 40px 10px;
+  display: flex;
+  text-align: left;
+  background-color: white;
+  border-radius: 2px;
+  border: none;
+  box-shadow: 0 0 8px 0 #bbbbbb;
+  cursor: pointer;
+  outline: none;
+}
+.email-button button h1 {
+  font-size: 15px;
+  font-weight: normal;
+  margin-bottom: 10px;
+}
+.email-button button p {
+  color: grey;
+}
+.email-button div {
+  margin: 0 10px;
+}
+.email-button svg {
+  fill: #e38f6e;
+}
+
+.confirmation {
+  height: 65%;
+  background-color: white;
+}
+.confirmation div {
+  width: 290px;
+  margin-left: 30px;
+  text-align: center;
+  display: inline-block;
+  margin-top: 80px;
+}
+.confirmation div h1 {
+  font-size: 20px;
+  font-weight: normal;
+  margin-bottom: 10px;
+}
+.confirmation div p {
+  color: grey;
+  font-size: 13px;
+}
+
+.contact-conf {
+  border-radius: 0 0 50% 50%;
 }
 
 /*# sourceMappingURL=App.css.map */
