Added DB write fail handling

--- a/src/App.css
+++ b/src/App.css
@@ -19,9 +19,10 @@
 }
 .chat-container .close-icon {
   padding: 23px 10px 10px 25px;
+  transform: rotate(0);
   transform: rotate(90deg);
-  transition: transform 1s linear;
-  transition-delay: 2s;
+  transition-property: transform;
+  transition-duration: 2s;
 }
 .chat-container .close-icon svg {
   margin-right: 5px;
