--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -386,4 +386,90 @@
   border-radius: 0 0 50% 50%;
 }
 
+.nav {
+  background-color: #f96e5b;
+  padding: 10px;
+  a {
+    margin-right: 20px;
+    text-decoration: none;
+    margin-bottom: 40px;
+    color: white;
+    &:hover {
+      color: black;
+    }
+  }
+}
+
+.login {
+  padding: 20px;
+  position: absolute;
+  left: calc((100% - 370px) / 2);
+  top: calc((100% - 165px) / 2);
+  background-color: #c1cbd4;
+  display: inline-block;
+  input {
+    height: 20px;
+    margin-bottom: 5px;
+    display: block;
+    border-radius: 2px;
+    width: 350px;
+    padding: 10px;
+    border: none;
+  }
+  button {
+    background-color: #07c;
+    padding: 10px;
+    color: white;
+    border-radius: 2px;
+    font-weight: bold;
+    border: none;
+    cursor: pointer;
+    outline: none;
+    width: 370px;
+  }
+
+  p {
+    margin-top: 20px;
+    text-align: center;
+    color: red;
+    font-size: 15px;
+  }
+}
+
+.sign-up {
+  padding: 20px;
+  position: absolute;
+  left: calc((100% - 370px) / 2);
+  top: calc((100% - 165px) / 2);
+  background-color: #c1cbd4;
+  display: inline-block;
+  input {
+    height: 20px;
+    margin-bottom: 5px;
+    display: block;
+    border-radius: 2px;
+    width: 350px;
+    padding: 10px;
+    border: none;
+  }
+  button {
+    background-color: #07c;
+    padding: 10px;
+    color: white;
+    border-radius: 2px;
+    font-weight: bold;
+    border: none;
+    cursor: pointer;
+    outline: none;
+    width: 370px;
+  }
+
+  p {
+    margin-top: 20px;
+    text-align: center;
+    color: red;
+    font-size: 15px;
+  }
+}
+
 /*# sourceMappingURL=App.css.map */
