--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -195,6 +195,7 @@
 }
 
 .users {
+  margin-top: 40px;
   table {
     width: 100%;
   }
@@ -266,8 +267,9 @@
 }
 
 .sign-out {
-  float: right;
-  margin: 20px;
+  position: absolute;
+  right: 20px;
+  top: 8px;
   background-color: black;
   padding: 10px 15px;
   color: white;
@@ -388,7 +390,7 @@
 
 .nav {
   background-color: #f96e5b;
-  padding: 10px;
+  padding: 16px;
   a {
     margin-right: 20px;
     text-decoration: none;
@@ -416,6 +418,7 @@
     padding: 10px;
     border: none;
   }
+
   button {
     background-color: #07c;
     padding: 10px;
@@ -428,11 +431,38 @@
     width: 370px;
   }
 
+  .log-spin {
+    margin-top: 10px;
+    margin-left: calc(50% - 11px);
+  }
+
   p {
     margin-top: 20px;
     text-align: center;
     color: red;
     font-size: 15px;
+  }
+}
+
+.Already-logged {
+  display: flex;
+  position: absolute;
+  top: 50%;
+  left: calc((100% - 748.484px) / 2);
+  button {
+    position: relative;
+    margin-left: 20px;
+    background-color: black;
+    padding: 10px 15px;
+    color: white;
+    border-radius: 20px;
+    font-weight: bold;
+    border: none;
+    cursor: pointer;
+    outline: none;
+    &:hover {
+      background-color: grey;
+    }
   }
 }
 
@@ -470,6 +500,12 @@
     color: red;
     font-size: 15px;
   }
+}
+
+.spinner {
+  position: absolute;
+  top: 50%;
+  left: 50%;
 }
 
 /*# sourceMappingURL=App.css.map */
