--- a/src/App.css
+++ b/src/App.css
@@ -259,15 +259,15 @@
 }
 
 .sign-out {
+  border: solid 2px white;
   position: absolute;
   right: 20px;
-  top: 8px;
+  top: 5px;
   background-color: black;
   padding: 10px 15px;
   color: white;
   border-radius: 20px;
   font-weight: bold;
-  border: none;
   cursor: pointer;
   outline: none;
 }
